--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.9.2",
     "webpack-merge": "^5.8.0"
+  },
+  "dependencies": {
+    "@karim04/dropdown-menu": "^1.1.0"
   }
 }
